objects/ssot__ApplicationTask__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ApplicationDecisionId__c</fullName>
        <label>Application Decision Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ApplicationId__c</fullName>
        <label>Application</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ApplicationReviewId__c</fullName>
        <label>Application Review Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DueDate__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__EndDateTime__c</fullName>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Application Task Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsSubmitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PreliminaryApplicationRefId__c</fullName>
        <label>Preliminary Application Reference</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SavedApplicationURL__c</fullName>
        <label>Saved Application URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SequenceNumber__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__StartDateTime__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Status__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Type__c</fullName>
        <label>Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719819537272_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ApplicationTask_PreliminaryApplicati_rel</label>
        <referenceTo>ssot__SavedApplicationReference__dlm</referenceTo>
        <relationshipLabel>ApplicationTask_PreliminaryApplicati_rel</relationshipLabel>
        <relationshipName>rel_1719819537272_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1732247635673_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ApplicationTask_ApplicationDecisionI_rel</label>
        <referenceTo>ssot__ApplicationDecision__dlm</referenceTo>
        <relationshipLabel>ApplicationTask_ApplicationDecisionI_rel</relationshipLabel>
        <relationshipName>rel_1732247635673_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1732247640960_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ApplicationTask_ApplicationReviewId__rel</label>
        <referenceTo>ssot__ApplicationReview__dlm</referenceTo>
        <relationshipLabel>ApplicationTask_ApplicationReviewId__rel</relationshipLabel>
        <relationshipName>rel_1732247640960_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>